# TravelAI

./: .dockerignore  .gitignore  CHANGELOG_QUICKSTART.md  Dockerfile  FRONTEND_CHECKLIST.md  PHASE1_完成報告.md  PROJECT_STRUCTURE.md  QUICKSTART_USAGE.md  README.md  TODO.md  docker-compose.yml  env.example  geocoding_cache.json  process_osrm.sh  pyproject.toml  quick-start.sh  requirements.txt  start_server.py  test_backend_frontend_integration.html  test_osrm_frontend.html
docs/: BACKEND_FRONTEND_INTEGRATION_GUIDE.md  GOOGLE_OAUTH_SETUP.md  OSRM_INTEGRATION_GUIDE.md  REAL_OSRM_INTEGRATION_REPORT.md  VEHICLE_TIME_FIX_REPORT.md  bus_data_fix_summary.md  bus_data_integration.md  dialog_examples.md  smart_transport_planning.md  tdx_restaurant_yilan_raw.json  tdx_scenic_yilan_raw.json  uv_guide.md  前端開發完整清單.md  前端頁面功能表.md  大客車動態能耗與碳排放係數.csv  宜蘭縣旅館名冊.json  宜蘭縣民宿名冊.json  小客車動態能耗與碳排放係數.csv  快速啟動指南.md  快速開始-資料庫設定.md  會員系統整合完成.md  機車動態能耗與碳排放係數.csv  環保標章旅館環境即時通地圖資料.json  環保餐廳環境即時通地圖資料.json  環境教育設施場所認證資料.json  系統架構總覽圖.md  系統架構設計文件.md  行程規劃邏輯文件.md  認證API使用指南.md  認證模組開發總結.md
docs/debug/: API_DEBUG_REPORT.md
docs/design/: 03_architecture_and_design_document.md
docs/guides/: 06_project_structure_guide.md  quick_start_guide.md
docs/planning/: 01_project_brief_and_prd.md
docs/quality/: 05_security_and_readiness_checklist.md
docs/specs/: 04_api_design_specification.md  feedback_scenarios.feature  planning_scenarios.feature
frontend/: package-lock.json  package.json  tailwind.config.ts
migrations/: 006_add_google_oauth_fields.sql  007_fix_database_consistency.sql  007_fix_database_consistency_no_vector.sql  008_add_bus_transport_tables.sql
scripts/: add_embedding_column.py  add_test_accommodations.py  batch_process_accommodation.py  bus_routing_example.py  check_bus_data_quality.py  check_eco_accommodations.py  clear_and_reimport.py  create_accommodation_tables.py  debug_gemini_time.py  deduplication_manager.py  enhance_bus_times.py  enhance_short_response_handling.py  final_summary_report.py  fix_bus_times.py  generate_embeddings.py  import_accommodation_data.py  import_bus_data.py  import_data.py  init_database.py  integrate_bus_data.py  interactive_dialog_test.py  mark_eco_accommodations.py  mock_osrm_server.py  optimized_batch_process.py  remark_eco_accommodations.py  run_migration.py  setup_bus_integration.sh  setup_gemini.sh  simple_dialog_demo.py  smart_batch_process.py  sql_mark_eco_accommodations.py  stable_batch_process.py  start.sh  start_dev.sh  start_osrm.sh  start_osrm_service.py  start_real_osrm.sh  stop.sh  test_auth_api.py  test_backend_integration.py  (+7 more)
scripts/migrations/: 000_existing_tables_reference.sql  001_create_user_system_tables.sql  README.md
src/itinerary_planner/: main.py  main_fixed.py
stitch_/個人資料/: code.html
stitch_/偏好設定/: code.html
stitch_/公開行程/: code.html
stitch_/我的行程列表/: code.html
stitch_/登入頁/: code.html
stitch_/編輯行程/: code.html
stitch_/行程規劃/: code.html
stitch_/行程詳情/: code.html
stitch_/規劃頁面1_-_基本資料/: code.html
stitch_/規劃頁面2_-_行程結果/: code.html
stitch_/註冊頁/: code.html
stitch_/附近景點/: code.html
stitch_/首頁/: code.html
tests/: conftest.py  test_orm_models.py
tests/api/: test_auth_endpoints.py  test_auth_endpoints_fixed.py  test_conversation_endpoints.py  test_main_app.py  test_oauth_endpoints.py  test_oauth_interface_endpoints_simple.py  test_places_endpoints.py  test_places_enhanced_endpoints.py  test_routing_endpoints.py  test_trips_endpoints.py  test_trips_endpoints_final.py  test_unified_conversation_endpoints.py
tests/integration/: test_places_api.py  test_planning_flow.py
tests/performance/: test_conversation_performance.py
tests/unit/: test_auth_dependencies.py  (+25 more)
(+125 files in other folders)
